# FHE-BERT-Tiny

./: .gitignore  CMakeLists.txt  LICENSE  README.md
input/: input_0.txt  input_1.txt  input_10.txt  input_11.txt  input_2.txt  input_3.txt  input_4.txt  input_5.txt  input_6.txt  input_7.txt  input_8.txt  input_9.txt
inputs-sst2/: input_0.txt  input_1.txt  input_2.txt  input_3.txt  input_4.txt  input_5.txt  input_6.txt  input_7.txt  input_8.txt  input_9.txt
notebooks/: Precision of FHE Circuit.ipynb  Precomputed Layer Normalization performance.ipynb  SST-2 BERT-Tiny Chebyshev Intervals.ipynb  SST-2 BERT-Tiny to FHE.ipynb  SST-2-test.parquet  SST-2-val.parquet  Sentences analytics [Removed].ipynb  testsPrecision of FHE Circuit [Removed].ipynb
src/: ExtractEmbeddings.py  FHEController.cpp  FHEController.h  PlainCircuit.py  Precision.py  Utils.h  main.cpp  requirements.txt
weights-sst2/: classifier_bias.txt  layer0_attself_query_bias.txt  layer0_attself_value_weight.txt  layer0_intermediate_weight1.txt  layer0_intermediate_weight4.txt  layer0_output_mean.txt  layer0_output_normbias.txt  layer0_output_weight.txt  layer0_output_weight1.txt  layer0_output_weight3.txt  layer0_output_weight4.txt  layer0_selfoutput_bias.txt  layer0_selfoutput_normbias.txt  layer0_selfoutput_vy.txt  layer0_selfoutput_weight.txt  layer1_attself_key_bias.txt  layer1_attself_value_weight.txt  layer1_intermediate_weight2.txt  layer1_intermediate_weight4.txt  layer1_output_vy.txt  layer1_output_weight.txt  layer1_output_weight1.txt  layer1_output_weight3.txt  layer1_output_weight4.txt  (+2 more)
(+147 files in other folders)
